--- a/index.html
+++ b/index.html
@@ -5,25 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <title>Tic Tac Toe</title>
+    <script src="script.js" defer></script>
   </head>
   <body>
     <div id="container">
       <div id="header">TicTacToe</div>
       <div id="status">Player 1 WIN</div>
       <div id="gameboard">
-        <div class="box">
+        <div class="box" id="box-1">
           <img src="assets/o.png" alt="" />
         </div>
-        <div class="box">
+        <div class="box" id="box-2">
           <img src="assets/x.png" alt="" />
         </div>
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
+        <div class="box" id="box-3"></div>
+        <div class="box" id="box-4"></div>
+        <div class="box" id="box-5"></div>
+        <div class="box" id="box-6"></div>
+        <div class="box" id="box-7"></div>
+        <div class="box" id="box-8"></div>
+        <div class="box" id="box-9"></div>
       </div>
       <div id="buttons">
         <div id="restart">
