--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="container">
       <div id="header">TicTacToe</div>
       <div id="status"></div>
-      <div id="gameboard">
+      <div id="game-board">
         <div id="board">
           <div class="box" id="box-1"></div>
           <div class="box" id="box-2"></div>
@@ -33,11 +33,7 @@
         </div>
       </div>
       <div id="buttons">
-        <div id="restart">
-          <button onclick="reset();">
-            <img src="assets/restart.png" class="icon" />
-          </button>
-        </div>
+        <div id="restart"></div>
       </div>
     </div>
   </body>
